--- a/src/css/App.css
+++ b/src/css/App.css
@@ -33,7 +33,10 @@ html {
 .single-day :hover {
   background-color: #1c9cf6;
   border-radius: 10px;
-  cursor: pointer;
+  cursor: pointer; 
+   border: 1px solid #dee2e6!important;
+
+  /* border-width: 3px!important; */
 }
 
 .selected {
@@ -296,3 +299,101 @@ h1{
     opacity: 0;
   }
 }
+/* -----------flyicons--------------- */
+
+@media all{
+	*{box-sizing:border-box;}
+	::-moz-selection{color:#fff!important;-webkit-text-fill-color:#fff!important;background:#f44238;}
+	::selection{color:#fff!important;-webkit-text-fill-color:#fff!important;background:#f44238;}
+	.relative{position:relative;}
+	::-webkit-input-placeholder{color:#757575!important;}
+	:-ms-input-placeholder{color:#757575!important;}
+	::placeholder{color:#757575!important;}
+	@media (min-width:55rem){
+	.half-column{width:52%;}
+	}
+	@media (min-width:55rem){
+	.half-column{width:52%;}
+	}
+	@media (max-width:54.999rem){
+	.half-column{width:100%;}
+	}
+	.home-new ::-webkit-input-placeholder,.home-new ::placeholder{color:#97a2b6!important;}
+	@media (max-width:84.999rem){
+	.integrations-wrapper{transform:scale(.8);}
+	}
+	@media (max-width:64.999rem){
+	.integrations-wrapper{display:none;}
+	}
+	.integration-icon{background:#fff;width:7.25rem;height:7.25rem;display:flex;align-items:center;justify-content:center;border-radius:5rem;position:absolute;box-shadow:2px 2px 20px rgba(0,0,0,.2);}
+	.integration-icon img{max-width:4.5rem;}
+	.integration-icon.zoominfo{background:#ffffff;z-index:10;width:10rem;height:10rem;left:8rem;top:6rem;animation:zoominfo-float 6s ease-in-out infinite;}
+	.integration-icon.zoominfo img{max-width:5rem;}
+	@media (max-width:64.999rem){
+	.integration-icon.zoominfo{left:45%;top:-3rem;}
+	}
+	.integration-icon.microsoft{
+		outline:none;
+    border-color:#9ecaed;
+    box-shadow:0 0 20px 20px #9ecaed;
+		background:#fff;width:5rem;height:5rem;animation:microsoft-float 6s ease-in-out infinite;top:12rem;right:-22rem;}
+	@media (max-width:64.999rem){
+	.integration-icon.microsoft{left:57%;top:8rem;}
+	}
+	.integration-icon.outreach{background:#ffffff;width:5rem;height:5rem;animation:outreach-float 4s ease-in-out infinite;right:-34rem;top:4rem;z-index:2;}
+	@media (max-width:64.999rem){
+	.integration-icon.outreach{left:64%;top:-7rem;}
+	}
+	.integration-icon.salesforce{background:#fff;left:6rem;bottom:1rem;animation:salesforce-float 6s ease-in-out infinite;width:5rem;height:5rem;}
+	@media (max-width:64.999rem){
+	.integration-icon.salesforce{left:21%;top:3rem;}
+	}
+	.integration-icon.salesloft{background:#ffffff;animation:salesloft-float 4s ease-in-out infinite;top:-10rem;left:0;}
+	@media (max-width:64.999rem){
+	.integration-icon.salesloft{left:21%;top:-8rem;}
+	}
+	.integration-icon.eloqua{background:#fff;animation:eloqua-float 6s ease-in-out infinite;right:-26rem;top:0;}
+	@media (max-width:64.999rem){
+	.integration-icon.eloqua{left:85%;top:-5rem;}
+	}
+	.integration-icon.marketo{background:#563e94;animation:marketo-float 5s ease-in-out infinite;left:13rem;bottom:6rem;}
+	@media (max-width:64.999rem){
+	.integration-icon.marketo{left:0%;top:-6rem;}
+	}
+	.integration-icon.chrome{background:#fff;animation:chrome-float 4s ease-in-out infinite;left:19rem;bottom:-5rem;}
+	@media (max-width:64.999rem){
+	.integration-icon.chrome{left:0;top:3rem;}
+	}
+	.integration-icon.ringlead{background:#fff;width:6.5rem;height:6.5rem;animation:ringlead-float 6s ease-in-out infinite;left:10rem;top:-2rem;}
+	@media (max-width:64.999rem){
+	.integration-icon.ringlead{left:45%;top:-6rem;}
+	}
+	.integration-icon.hubspot{background:#ffffff;animation:hubspot-float 5s ease-in-out infinite;right:-29rem;bottom:5rem;}
+	@media (max-width:64.999rem){
+	.integration-icon.hubspot{left:75%;top:4rem;}
+	}
+	.integration-icon.snowflake{
+		outline:none;
+    border-color:#9ecaed;
+    box-shadow:0 0 68px 20px #ea5e5e;
+		background:#fff;animation:hubspot-float 5s ease-in-out infinite;left: auto;
+		right: -34rem;top:12rem;}
+	@media (max-width:64.999rem){
+	.integration-icon.snowflake{right:auto;left:-1rem;top:12rem;}
+	}
+	.integration-icon.bullhorn{background:#fff;left:2rem;top:2rem;width:5rem;height:5rem;animation:float-2 6s ease-in-out infinite;}
+	.integration-icon.stack{background:#fff;right:-37rem;bottom:-1rem;width:4rem;height:4rem;animation:float-3 6s ease-in-out infinite;}
+	}
+	/*! CSS Used keyframes */
+	@keyframes zoominfo-float{0%{transform:translate(0,0);}50%{transform:translate(15px,15px);}100%{transform:translate(0,0);}}
+	@keyframes microsoft-float{0%{transform:translate(0,0);}50%{transform:translate(5px,-10px);}100%{transform:translate(0,0);}}
+	@keyframes outreach-float{0%{transform:translate(0,0);}50%{transform:translate(-10px,5px);}100%{transform:translate(0,0);}}
+	@keyframes salesforce-float{0%{transform:translate(0,0);}50%{transform:translate(-20px,20px);}100%{transform:translate(0,0);}}
+	@keyframes salesloft-float{0%{transform:translate(0,0);}50%{transform:translate(-15px,-15px);}100%{transform:translate(0,0);}}
+	@keyframes eloqua-float{0%{transform:translate(0,0);}50%{transform:translate(20px,-10px);}100%{transform:translate(0,0);}}
+	@keyframes marketo-float{0%{transform:translate(0,0);}50%{transform:translate(-15px,0);}100%{transform:translate(0,0);}}
+	@keyframes chrome-float{0%{transform:translate(0,0);}50%{transform:translate(15px,5px);}100%{transform:translate(0,0);}}
+	@keyframes ringlead-float{0%{transform:translate(0,0);}50%{transform:translate(-10px,10px);}100%{transform:translate(0,0);}}
+	@keyframes hubspot-float{0%{transform:translate(0,0);}50%{transform:translate(0,20px);}100%{transform:translate(0,0);}}
+	@keyframes float-2{0%{transform:translate(0,0);}50%{transform:translate(-15px,0);}100%{transform:translate(0,0);}}
+	@keyframes float-3{0%{transform:translate(0,0);}50%{transform:translate(-20px,20px);}100%{transform:translate(0,0);}}
